5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1644_1054.log
== SUBMITION (2019-04-16 13:19:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Coordenada X: "))
y = float(input("Coordenada Y: "))

reta = 2 * x + y 

if(reta ==  3) :
	mensagem: = "ponto pertence a reta "
else:
	mensagem = "ponto nao pertence a reta"
print (mensagem)
-- EXECUTION TIME:
0.155598
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 10
    mensagem: = "ponto pertence a reta "
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:20:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Coordenada X: "))
y = float(input("Coordenada Y: "))

reta = 2 * x + y 

if(reta ==  3) :
	mensagem: = "ponto pertence a reta "
else:
	mensagem = "ponto nao pertence a reta"
print (mensagem)
-- EXECUTION TIME:
0.191651
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 10
    mensagem: = "ponto pertence a reta "
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:20:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Coordenada X: "))
y = float(input("Coordenada Y: "))

reta = 2 * x + y 

if(reta ==  3) :
	mensagem: = "ponto pertence a reta "
else:
	mensagem = "ponto nao pertence a reta"
print (mensagem)
-- EXECUTION TIME:
0.209007
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 10
    mensagem: = "ponto pertence a reta "
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:20:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Coordenada X: "))
y = float(input("Coordenada Y: "))

reta = 2 * x + y 

if(reta ==  3) :
	mensagem: = "ponto pertence a reta "
else:
	mensagem = "ponto nao pertence a reta"
print (mensagem)
-- EXECUTION TIME:
0.205519
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 10
    mensagem: = "ponto pertence a reta "
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float (input("Coordenada X: "))
y = float (input("Coordenada Y: "))

reta = 2 * x + y

if(reta == 3):
	mensagem = "ponto pertence a reta"
else: 
	mensagem = "ponto nao pertence a reta"
	print (mensagem)
-- EXECUTION TIME:
0.208394
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:

-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float (input("Coordenada X: "))
y = float (input("Coordenada Y: "))

reta = 2 * x + y

if(reta == 3):
	mensagem = "ponto pertence a reta"
else: 
	mensagem = "ponto nao pertence a reta"
	print (mensagem)
-- EXECUTION TIME:
0.133269
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:

-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float (input("Coordenada X: "))
y = float (input("Coordenada Y: "))

reta = 2 * x + y

if(reta == 3):
	mensagem = "ponto pertence a reta"
else: 
	mensagem = "ponto nao pertence a reta"
	print (mensagem)
-- EXECUTION TIME:
0.111867
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:

-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float (input("Coordenada X: "))
y = float (input("Coordenada Y: "))

reta = 2 * x + y

if(reta == 3):
	mensagem = "ponto pertence a reta"
else: 
	mensagem = "ponto nao pertence a reta"
	print (mensagem) 
-- EXECUTION TIME:
0.122127
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:

-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float (input("Coordenada X: "))
y = float (input("Coordenada Y: "))

reta = 2 * x + y

if(reta == 3):
	mensagem = "ponto pertence a reta"
else: 
	mensagem = "ponto nao pertence a reta"
	print (mensagem) 
-- EXECUTION TIME:
0.125862
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:

-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float (input("Coordenada X: "))
y = float (input("Coordenada Y: "))

reta = 2 * x + y

if(reta == 3):
	mensagem = "ponto pertence a reta"
else: 
	mensagem = "ponto nao pertence a reta"
	print (mensagem) 
-- EXECUTION TIME:
0.108941
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1644/1054/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float (input("Coordenada X: "))
y = float (input("Coordenada Y: "))

reta = 2 * x + y

if(reta == 3):
	mensagem = "ponto pertence a reta"
else: 
	mensagem = "ponto nao pertence a reta"
	print (mensagem) 
-- EXECUTION TIME:
0.161441
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:

-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float (input("Coordenada X: "))
y = float (input("Coordenada Y: "))

reta = 2 * x + y

if(reta == 3):
	mensagem = "ponto pertence a reta"
else: 
	mensagem = "ponto nao pertence a reta"
	print (mensagem) 
-- EXECUTION TIME:
0.203635
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:

-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float (input("Coordenada X: "))
y = float (input("Coordenada Y: "))

reta = 2 * x + y

if(reta == 3):
	mensagem = "ponto pertence a reta"
else: 
	mensagem = "ponto nao pertence a reta"
	print (mensagem) 
-- EXECUTION TIME:
0.104609
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1644/1054/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:55:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float (input("Coordenada X: "))
y = float (input("Coordenada Y: "))

reta = 2 * x + y

if(reta == 3):
	mensagem = "ponto pertence a reta"
else: 
	mensagem = "ponto nao pertence a reta"
print (mensagem) 
-- EXECUTION TIME:
0.208785
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
